[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/singletons/audio_system.gd" type="Script" id=1]
[ext_resource path="res://audio/soundtracks/soundtrack_level_1.ogg" type="AudioStream" id=2]
[ext_resource path="res://audio/soundtracks/soundtrack_level_2.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/soundtracks/soundtrack_level_3.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/soundtracks/soundtrack_level_5.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/soundtracks/soundtrack_level_4.ogg" type="AudioStream" id=6]

[node name="audio_system" type="Node2D"]
script = ExtResource( 1 )

[node name="faixa1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
autoplay = true

[node name="faixa2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0
autoplay = true

[node name="faixa3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0
autoplay = true

[node name="faixa4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -80.0
autoplay = true

[node name="faixa5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -80.0
autoplay = true
